beta binomial additions

--- a/index.Rmd
+++ b/index.Rmd
@@ -36,6 +36,7 @@ vembedr::embed_url("https://www.youtube.com/watch?v=0zZopLlomsQ")
 * `poisson()` for count data
 * `nb()` for overdispersed count data
 * `binomial()` for count data with known number of trials
+* `beta_binomial()` for overdispersed count data with known number of trials
 * `nmix()` for count data with imperfect detection (unknown number of trials)
 * `tweedie()` for overdispersed count data
   
