--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,9 @@ A series of [vignettes cover data formatting, forecasting and several extended c
 * [Ecological Forecasting with Dynamic Generalized Additive Models](https://www.youtube.com/watch?v=0zZopLlomsQ){target="_blank"}
 * [Distributed lags (and hierarchical distributed lags) using `mgcv` and `mvgam`](https://ecogambler.netlify.app/blog/distributed-lags-mgcv/){target="_blank"}
 * [Ecological Forecasting with Dynamic GAMs; a tutorial and detailed case study](https://www.youtube.com/watch?v=RwllLjgPUmM){target="_blank"}
+* [How to interpret and report nonlinear effects from Generalized Additive Models](https://ecogambler.netlify.app/blog/interpreting-gams/){target="_blank"}
+* [Phylogenetic smoothing using mgcv](https://ecogambler.netlify.app/blog/phylogenetic-smooths-mgcv/){target="_blank"}
+* [Distributed lags (and hierarchical distributed lags) using mgcv and mvgam](https://ecogambler.netlify.app/blog/distributed-lags-mgcv/){target="_blank"}
   
 ## Installation
 Install from `GitHub` using:
@@ -58,7 +61,7 @@ some features of `mvgam` which specifically rely on certain packages. The most i
 ## Cheatsheet
 [![`mvgam` usage cheatsheet](https://github.com/nicholasjclark/mvgam/raw/master/misc/mvgam_cheatsheet.png)](https://github.com/nicholasjclark/mvgam/raw/master/misc/mvgam_cheatsheet.pdf)
 
-## A brief introduction to the package
+## Introducing mvgam for fitting Generalized Additive Models to time seriese
 We can explore the model’s primary functions using a dataset that is available with all `R` installations. Load the `lynx` data and plot the series as well as its autocorrelation function
 ```{r include = FALSE}
 library(mvgam)
@@ -68,7 +71,7 @@ library(mvgam)
 library(mvgam)
 ```
 
-```{r}
+```{r, fig.alt = "Visualizing the lynx time series in R"}
 data(lynx)
 lynx_full <- data.frame(year = 1821:1934, 
                         population = as.numeric(lynx))
@@ -81,7 +84,7 @@ box(bty = 'l', lwd  = 2)
 ```
 
 Along with serial autocorrelation, there is a clear ~19-year cyclic pattern. Create a `season` term that can be used to model this effect and give a better representation of the data generating process than we would likely get with a linear model
-```{r}
+```{r, fig.alt = "Visualizing and decomposing the lynx time series in R"}
 plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'),
      lwd = 2, col.range = 'darkred')
 lynx_full$season <- (lynx_full$year%%19) + 1
@@ -100,7 +103,7 @@ lynx_test = lynx_full[51:60, ]
 ```
 
 Inspect the series in a bit more detail using `mvgam`'s plotting utility
-```{r, message=FALSE, warning=FALSE, fig.width=6.5, fig.height=6.5, dpi=160}
+```{r, message=FALSE, warning=FALSE, fig.width=6.5, fig.height=6.5, dpi=160, fig.alt = "Plotting time series features with the mvgam R package"}
 plot_mvgam_series(data = lynx_train, y = 'population')
 ```
 
@@ -136,61 +139,61 @@ summary(lynx_mvgam)
 ```
 
 As with any `MCMC` software, we can inspect traceplots. Here for the `GAM` smoothing parameters, using `mvgam`'s reliance on the excellent `bayesplot` library:
-```{r}
+```{r, fig.alt = "Smoothing parameter posterior distributions estimated with Stan in mvgam"}
 mcmc_plot(lynx_mvgam, variable = 'rho', regex = TRUE, type = 'trace')
 ```
 
 and for the latent trend parameters
-```{r}
+```{r, fig.alt = "Dynamic temporal autocorrelation parameters estimated with Stan in mvgam"}
 mcmc_plot(lynx_mvgam, variable = 'trend_params', regex = TRUE, type = 'trace')
 ```
 
 Use posterior predictive checks to see if the model can simulate data that looks realistic and unbiased. First, examine histograms for posterior retrodictions (`yhat`) and compare to the histogram of the observations (`y`)
-```{r}
+```{r, fig.alt = "Posterior predictive checks for discrete time series in R"}
 ppc(lynx_mvgam, series = 1, type = 'hist')
 ```
 
 Next examine simulated empirical Cumulative Distribution Functions (CDF) for posterior predictions
-```{r}
+```{r, fig.alt = "Posterior predictive checks for discrete time series in R"}
 ppc(lynx_mvgam, series = 1, type = 'cdf')
 ```
 
 Rootograms are [popular graphical tools for checking a discrete model's ability to capture dispersion properties of the response variable](https://arxiv.org/pdf/1605.01311.pdf){target="_blank"}. Posterior predictive hanging rootograms can be displayed using the `ppc()` function. In the plot below, we bin the unique observed values into `25` bins to prevent overplotting and help with interpretation. This plot compares the frequencies of observed vs predicted values for each bin. For example, if the gray bars (representing observed frequencies) tend to stretch below zero, this suggests the model's simulations predict the values in that particular bin less frequently than they are observed in the data. A well-fitting model that can generate realistic simulated data will provide a rootogram in which the lower boundaries of the grey bars are generally near zero
-```{r}
+```{r, fig.alt = "Posterior predictive rootograms for discrete time series in R"}
 ppc(lynx_mvgam, series = 1, type = 'rootogram', n_bins = 25)
 ```
 
 All plots indicate the model is well calibrated against the training data. Inspect the estimated cyclic smooth, which is shown as a ribbon plot of posterior empirical quantiles. We can also overlay posterior quantiles of partial residuals (shown in red), which represent the leftover variation that the model expects would remain if this smooth term was dropped but all other parameters remained unchanged. A strong pattern in the partial residuals suggests there would be strong patterns left unexplained in the model *if* we were to drop this term, giving us further confidence that this function is important in the model
-```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150}
+```{r, fig.width=5, fig.height=4, fig.align='center', dpi=150, fig.alt = "Plotting GAM smooth functions in mvgam and R"}
 plot(lynx_mvgam, type = 'smooths', residuals = TRUE)
 ```
 
 First derivatives of smooths can be plotted to inspect how the slope of the function changes. To plot these we use the more flexible `plot_mvgam_smooth()` function
-```{r}
+```{r, fig.alt = "Plotting GAM smooth functions in mvgam and R"}
 plot_mvgam_smooth(lynx_mvgam, series = 1, 
                   smooth = 'season', 
                   derivatives = TRUE)
 ```
 
 As for many types of regression models, it is often more useful to plot model effects on the outcome scale. `mvgam` has support for the wonderful `marginaleffects` package, allowing a wide variety of posterior contrasts, averages, conditional and marginal predictions to be calculated and plotted. Below is the conditional effect of season plotted on the outcome scale, for example:
-```{r}
+```{r, fig.alt = "Using marginaleffects and mvgam to plot GAM smooth functions in R"}
 require(ggplot2)
 plot_predictions(lynx_mvgam, condition = 'season', points = 0.5) +
   theme_classic()
 ```
 
 We can also view the `mvgam`'s posterior predictions for the entire series (testing and training)
-```{r}
+```{r, fig.alt = "Plotting forecast distributions using mvgam in R"}
 plot(lynx_mvgam, type = 'forecast', newdata = lynx_test)
 ```
 
 And the estimated latent trend component, again using the more flexible `plot_mvgam_...()` option to show first derivatives of the estimated trend
-```{r}
+```{r, fig.alt = "Plotting dynamic trend components using mvgam in R"}
 plot_mvgam_trend(lynx_mvgam, newdata = lynx_test, derivatives = TRUE)
 ```
 
 A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589){target="_blank"}. We can estimate relative contributions to forecast uncertainty for the GAM component and the latent trend component using `mvgam`
-```{r}
+```{r, fig.alt = "Decomposing uncertainty contributions to forecasts in mvgam in R"}
 plot_mvgam_uncertainty(lynx_mvgam, newdata = lynx_test, legend_position = 'none')
 text(1, 0.2, cex = 1.5, label="GAM component", 
      pos = 4, col="white", family = 'serif')
@@ -199,7 +202,7 @@ text(1, 0.8, cex = 1.5, label="Trend component",
 ```
 
 Both components contribute to forecast uncertainty. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior empirical quantiles of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR3 model is appropriate for the latent trend
-```{r, fig.width=6.5, fig.height=6.5, dpi=160}
+```{r, fig.width=6.5, fig.height=6.5, dpi=160, fig.alt = "Plotting Dunn-Smyth residuals for time series analysis in mvgam and R"}
 plot(lynx_mvgam, type = 'residuals')
 ```
 
@@ -210,11 +213,14 @@ plot(lynx_mvgam, type = 'residuals')
 * `student_t()` for heavy-tailed real-valued data
 * `lognormal()` for non-negative real-valued data
 * `Gamma()` for non-negative real-valued data
-* `betar()` for proportional data on `[0,1]`
+* `betar()` for proportional data on `(0,1)`
+* `bernoulli()` for binary data
 * `poisson()` for count data
 * `nb()` for overdispersed count data
+* `binomial()` for count data with known number of trials
+* `beta_binomial()` for overdispersed count data with known number of trials
+* `nmix()` for count data with imperfect detection (unknown number of trials)
 * `tweedie()` for overdispersed count data
-* `nmix()` for count data with imperfect detection
   
 Note that only `poisson()`, `nb()`, and `tweedie()` are available if using `JAGS`. All families, apart from `tweedie()`, are supported if using `Stan`. See `??mvgam_families` for more information. Below is a simple example for simulating and modelling proportional data with `Beta` observations over a set of seasonal series with independent Gaussian Process dynamic trends:
 ```{r beta_sim, message=FALSE, warning=FALSE, fig.width=6.5, fig.height=6.5, dpi=160}
