build vignettes for CRAN

--- a/vignettes/data_in_mvgam.Rmd
+++ b/vignettes/data_in_mvgam.Rmd
@@ -11,6 +11,16 @@ vignette: >
   \usepackage[utf8]{inputenc}
 ---
 
+```{r, echo = FALSE} 
+NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  purl = NOT_CRAN,
+  eval = NOT_CRAN
+)
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   echo = TRUE,   
