--- a/vignettes/nmixtures.Rmd
+++ b/vignettes/nmixtures.Rmd
@@ -10,6 +10,15 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
+```{r, echo = FALSE} 
+NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  purl = NOT_CRAN,
+  eval = NOT_CRAN
+)
+```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
